--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </header>
 
     <main>
-      <section class="hero section">
+      <section class="hero">
         <div class="container">
           <h1 class="hero__title">Effective Solutions for Your Business</h1>
           <button type="button" class="hero__cta">Order Service</button>
@@ -67,6 +67,11 @@
           <h2 class="section__title ghost"></h2>
           <ul class="features__list section__list">
             <li class="features__item features-item">
+              <div class="feature__icon-box">
+                <svg class="feature__icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-Group"></use>
+                </svg>
+              </div>
               <h3 class="section__sub-title">Strategy</h3>
               <p class="section__describtion">
                 Our goal is to identify the business problem to walk away with
@@ -74,6 +79,11 @@
               </p>
             </li>
             <li class="features__item features-item">
+              <div class="feature__icon-box">
+                <svg class="feature__icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="section__sub-title">Punctuality</h3>
               <p class="section__describtion">
                 Bring the key message to the brand's audience for the best price
@@ -81,6 +91,11 @@
               </p>
             </li>
             <li class="features__item features-item">
+              <div class="feature__icon-box">
+                <svg class="feature__icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="section__sub-title">Diligence</h3>
               <p class="section__describtion">
                 Research and confirm brands that present the strongest digital
@@ -88,6 +103,11 @@
               </p>
             </li>
             <li class="features__item features-item">
+              <div class="feature__icon-box">
+                <svg class="feature__icon" width="64" height="64">
+                  <use href="images/symbol-defs.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="section__sub-title">Technologies</h3>
               <p class="section__describtion">
                 Design practice focused on digital experiences. We bring forth a
@@ -135,6 +155,36 @@
 
               <h3 class="section__sub-title centered">Mark Guerrero</h3>
               <p class="section__describtion centered">Product Designer</p>
+              <ul class="social-list section__list">
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__member team-member">
               <img
@@ -147,6 +197,36 @@
 
               <h3 class="section__sub-title centered">Tom Ford</h3>
               <p class="section__describtion centered">Frontend Developer</p>
+              <ul class="social-list section__list">
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__member team-member">
               <img
@@ -159,6 +239,36 @@
 
               <h3 class="section__sub-title centered">Camila Garcia</h3>
               <p class="section__describtion centered">Marketing</p>
+              <ul class="social-list section__list">
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
             </li>
             <li class="team__member team-member">
               <img
@@ -171,6 +281,81 @@
 
               <h3 class="section__sub-title centered">Daniel Wilson</h3>
               <p class="section__describtion centered">UI Designer</p>
+              <ul class="social-list section__list">
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li class="social-list--item">
+                  <a href="" class="social-list--link">
+                    <svg class="social-list--icon" width="16" height="16">
+                      <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="customers section">
+        <div class="container">
+          <h2 class="section__title">Customers</h2>
+          <ul class="customer-list section__list">
+            <li class="customer-item">
+              <a href="" class="customer-link">
+                <svg class="customer-list__icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-1"></use>
+                </svg>
+              </a>
+            </li>
+
+            <li class="customer-item">
+              <a href="" class="customer-link"
+                ><svg class="customer-list__icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-2"></use></svg
+              ></a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-link"
+                ><svg class="customer-list__icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-3"></use></svg
+              ></a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-link"
+                ><svg class="customer-list__icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-4"></use></svg
+              ></a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-link"
+                ><svg class="customer-list__icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-5"></use></svg
+              ></a>
+            </li>
+            <li class="customer-item">
+              <a href="" class="customer-link"
+                ><svg class="customer-list__icon" width="104" height="56">
+                  <use href="./images/symbol-defs.svg#icon-Logo-6"></use></svg
+              ></a>
             </li>
           </ul>
         </div>
@@ -178,11 +363,58 @@
     </main>
     <footer class="footer">
       <div class="container footer-box">
-        <a href="./index.html" class="footer__logo"><span>Web</span>Studio</a>
-        <p class="footer__cta">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+        <div class="footer__describtion">
+          <a href="./index.html" class="footer__logo"><span>Web</span>Studio</a>
+          <p class="footer__cta">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer__social-links">
+          <h4 class="footer__social-title">Social media</h4>
+          <ul class="social-list section__list">
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg
+                  class="social-list--icon footer-social"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg class="social-list--icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg
+                  class="social-list--icon footer-social"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg
+                  class="social-list--icon footer-social"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
