--- a/portfolio.html
+++ b/portfolio.html
@@ -209,14 +209,60 @@
         </div>
       </section>
     </main>
-
     <footer class="footer">
-      <div class="container">
-        <a href="./index.html" class="footer__logo"><span> Web</span>Studio</a>
-        <p class="footer__cta">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-box">
+        <div class="footer__describtion">
+          <a href="./index.html" class="footer__logo"><span>Web</span>Studio</a>
+          <p class="footer__cta">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="footer__social-links">
+          <h4 class="footer__social-title">Social media</h4>
+          <ul class="social-list section__list">
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg
+                  class="social-list--icon footer-social"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg class="social-list--icon" width="24" height="24">
+                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg
+                  class="social-list--icon footer-social"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="social-list--item">
+              <a href="" class="social-list--link">
+                <svg
+                  class="social-list--icon footer-social"
+                  width="24"
+                  height="24"
+                >
+                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </footer>
   </body>
