--- a/portfolio.html
+++ b/portfolio.html
@@ -82,128 +82,151 @@
             </li>
           </ul>
           <ul class="projects section__list">
-            <li class="projects__item projects-item">
-              <img
-                src="./images/baking-app.jpg"
-                alt="baking app"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Banking App Interface Concept
-                </h2>
-                <p class="projects-item__desc section__describtion">App</p>
-              </div>
+            <li class="projects__item projects-item project-1">
+              <a href="" class="project-link">
+                <img
+                  src="./images/baking-app.jpg"
+                  alt="baking app"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Banking App Interface Concept
+                  </h2>
+                  <p class="projects-item__desc section__describtion">App</p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/cashless-payment.jpg"
-                alt="cashless payment"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Cashless Payment
-                </h2>
-                <p class="projects-item__desc section__describtion">
-                  Marketing
-                </p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/cashless-payment.jpg"
+                  alt="cashless payment"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Cashless Payment
+                  </h2>
+                  <p class="projects-item__desc section__describtion">
+                    Marketing
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/meditation-app.jpg"
-                alt="Meditattion app"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Meditaion App
-                </h2>
-                <p class="projects-item__desc section__describtion">App</p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/meditation-app.jpg"
+                  alt="Meditattion app"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Meditaion App
+                  </h2>
+                  <p class="projects-item__desc section__describtion">App</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="projects__item projects-item">
+              <a href="" class="project-link">
+                <img
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi service"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Taxi Service
+                  </h2>
+                  <p class="projects-item__desc section__describtion">
+                    Marketing
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/taxi-service.jpg"
-                alt="Taxi service"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Taxi Service
-                </h2>
-                <p class="projects-item__desc section__describtion">
-                  Marketing
-                </p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/screen-illustration.jpg"
+                  alt="Picture of the screen"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Screen Illustrations
+                  </h2>
+                  <p class="projects-item__desc section__describtion">Design</p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/screen-illustration.jpg"
-                alt="Picture of the screen"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Screen Illustrations
-                </h2>
-                <p class="projects-item__desc section__describtion">Design</p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/online-courses.jpg"
+                  alt="Web Site with online Courses"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Online Courses
+                  </h2>
+                  <p class="projects-item__desc section__describtion">
+                    Marketing
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/online-courses.jpg"
-                alt="Web Site with online Courses"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Online Courses
-                </h2>
-                <p class="projects-item__desc section__describtion">
-                  Marketing
-                </p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/instagram-stories.jpg"
+                  alt="Web site to create creative stories for Instagram"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Instagram Stories Concept
+                  </h2>
+                  <p class="projects-item__desc section__describtion">Design</p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/instagram-stories.jpg"
-                alt="Web site to create creative stories for Instagram"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Instagram Stories Concept
-                </h2>
-                <p class="projects-item__desc section__describtion">Design</p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/organic-food.jpg"
+                  alt="Web Site for ordering organic food"
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Organic Food
+                  </h2>
+                  <p class="projects-item__desc section__describtion">
+                    Web Site
+                  </p>
+                </div>
+              </a>
             </li>
             <li class="projects__item projects-item">
-              <img
-                src="./images/organic-food.jpg"
-                alt="Web Site for ordering organic food"
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Organic Food
-                </h2>
-                <p class="projects-item__desc section__describtion">Web Site</p>
-              </div>
-            </li>
-            <li class="projects__item projects-item">
-              <img
-                src="./images/fresh-coffee.jpg"
-                alt="Cofee shop Web Site "
-                class="projects-item__picture section__photo"
-              />
-              <div class="project-content">
-                <h2 class="projects-item__title section__sub-title">
-                  Fresh Coffee
-                </h2>
-                <p class="projects-item__desc section__describtion">Web Site</p>
-              </div>
+              <a href="" class="project-link">
+                <img
+                  src="./images/fresh-coffee.jpg"
+                  alt="Cofee shop Web Site "
+                  class="projects-item__picture section__photo"
+                />
+                <div class="project-content">
+                  <h2 class="projects-item__title section__sub-title">
+                    Fresh Coffee
+                  </h2>
+                  <p class="projects-item__desc section__describtion">
+                    Web Site
+                  </p>
+                </div>
+              </a>
             </li>
           </ul>
         </div>
