--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
           <h4 class="footer__social-title">Social media</h4>
           <ul class="social-list section__list">
             <li class="social-list--item">
-              <a href="" class="social-list--link">
+              <a href="" class="social-list--link footer--social-link">
                 <svg
                   class="social-list--icon footer-social"
                   width="24"
@@ -385,14 +385,14 @@
               </a>
             </li>
             <li class="social-list--item">
-              <a href="" class="social-list--link">
+              <a href="" class="social-list--link footer--social-link">
                 <svg class="social-list--icon" width="24" height="24">
                   <use href="./images/symbol-defs.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="social-list--item">
-              <a href="" class="social-list--link">
+              <a href="" class="social-list--link footer--social-link">
                 <svg
                   class="social-list--icon footer-social"
                   width="24"
@@ -403,7 +403,7 @@
               </a>
             </li>
             <li class="social-list--item">
-              <a href="" class="social-list--link">
+              <a href="" class="social-list--link footer--social-link">
                 <svg
                   class="social-list--icon footer-social"
                   width="24"
